<resources>
    <string name="app_name">Drink Water</string>
    <string name="hint_weight">Seu peso(kg)</string>
    <string name="hint_age">Sua idade</string>
    <string name="text_button_calc">CALCULAR INGESTÃO DIÁRIA</string>
    <string name="text_button_reminder">LEMBRETE</string>
    <string name="text_button_alarm">ALARME</string>
    <string name="text_hour">00</string>
    <string name="text_dots">:</string>
    <string name="text_min">00</string>
    <string name="toast_info_weight">Informe seu peso</string>
    <string name="toast_info_age">Informe seu idade</string>
    <string name="dialog_title">Redefinir Dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="message_alarm">Hora de beber água!</string>
</resources>