<?xml version="1.0" encoding="utf-8"?>

   <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintStart_toStartOf="@id/container_header" />
    
    <ImageView
        android:id="@+id/ic_clear"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh_24"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:textColorHint="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:textColorHint="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_calc"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:background="@drawable/bg_gradient_button"
        app:layout_constraintTop_toBottomOf="@id/edit_weight"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp" />

    <View
        android:id="@+id/container_result_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_result"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_result_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/container_result_ml"
        app:layout_constraintStart_toStartOf="@id/container_result_ml"
        app:layout_constraintEnd_toEndOf="@id/container_result_ml"
        app:layout_constraintBottom_toBottomOf="@id/container_result_ml"/>

    <Button
        android:id="@+id/bt_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_reminder"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_result_ml"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alarm"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_result_ml"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hour"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="160dp"
        app:layout_constraintTop_toBottomOf="@id/bt_reminder"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dots"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_reminder"
        app:layout_constraintStart_toEndOf="@id/txt_hour"/>

    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_min"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_reminder"
        app:layout_constraintStart_toEndOf="@id/txt_dots"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>